--- a/src/404.html
+++ b/src/404.html
@@ -2,7 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/png" href="/static/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/static/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/static/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png" />
+		<meta name="apple-mobile-web-app-title" content="Noah Elazar" />
+		<link rel="manifest" href="/static/favicon/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
